Add api get all comics of users
